# ccf_person_identification

./: CMakeLists.txt  README.html  README.md  package.xml
data/cnn_params/: conv_t1  conv_t2
data/cnn_params_tiny/: conv_t1  conv_t2
data/test/: .directory
include/ccf_person_identification/: ccf_person_identification.hpp  online_classifier.hpp  person_classifier.hpp
include/ccf_person_identification/body/: body_classifier.hpp  body_features.hpp  body_weak_classifier.hpp  cnn_channel_extractor.hpp  cnn_channel_extractor_gpu.hpp
include/ccf_person_identification/face/: face_classifier.hpp  face_features.hpp
include/kkl/cvk/: icf_channel_bank.hpp  icf_channel_extractor.hpp  icf_integral_filter.hpp
include/kkl/math/: gaussian.hpp
include/kkl/ml/: flann_knn_classifier.hpp  incremental_naive_bayes.hpp  online_boosting.hpp
include/kkl/viewer/: light_viewer.hpp
src/: ccf_person_identification.cpp  ccf_person_identification_test.cpp  cnn_test.cpp
