<?xml version="1.0"?>
<package format="2">
  <name>ccf_person_identification</name>
  <version>0.0.0</version>
  <description>The ccf_person_identification package</description>

  <maintainer email="koide@dei.unipd.it">koide</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>roslib</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>roslib</build_export_depend>
  <build_export_depend>cv_bridge</build_export_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>roslib</exec_depend>
  <exec_depend>cv_bridge</exec_depend>

  <export>
  </export>
</package>
